fixing wrap

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -881,6 +881,14 @@ div.credibility {
     margin-top:10px;
     padding:3px;
     border-top:1px dotted #C0C2B8;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;  
 }
 
 div.report-title {
